--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="juicyads-site-verification" content="98b010aad833b3f174a6637fa33496a4">
     <title>Présentation du Projet lerteRIa</title>
     <style>
         body {
