--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     </style>
 </head>
 <body>
-
+<!-- JuicyAds PopUnders v3 Start -->
+<script type="text/javascript" src="https://js.juicyads.com/jp.php?c=4464x2v2p224u4r2o2f4237414&u=https%3A%2F%2Fwww.juicyads.rocks"></script>
+<!-- JuicyAds PopUnders v3 End -->
 <header>
     <h1>Projet lerteRIa</h1>
 </header>
