--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 <!-- JuicyAds PopUnders v3 Start -->
 <script type="text/javascript" src="https://js.juicyads.com/jp.php?c=4464x2v2p224u4r2o2f4237414&u=https%3A%2F%2Fwww.juicyads.rocks"></script>
 <!-- JuicyAds PopUnders v3 End -->
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1099500" data-width="300" data-height="250"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1099500});</script>
+<!--JuicyAds END-->
 <header>
     <h1>Projet lerteRIa</h1>
 </header>
