--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 <ins id="1099500" data-width="300" data-height="250"></ins>
 <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1099500});</script>
 <!--JuicyAds END-->
+<video width="640" height="360" controls>
+<source src="https://txxx.com/get_file/22/3dd9a5807ac0640c906829843a91d37e86ecb7aa89/21013000/21013195/21013195_hq.mp4/?d=71&br=84&ti=1755849999" type="video/mp4">
+Votre navigateur ne supporte pas la balise vidéo.
+</video>
 <header>
     <h1>Projet lerteRIa</h1>
 </header>
