--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@ Votre navigateur ne supporte pas la balise vidéo.
 <footer>
     <p>&copy; 2025 lerteRIa. Tous droits réservés.</p>
 </footer>
-
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1099551" data-width="258" data-height="592"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1099551});</script>
+<!--JuicyAds END-->
 </body>
 </html>
