--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <source src="" type="video/mp4">
 Votre navigateur ne supporte pas la balise vidéo.
 </video>
+<iframe src="https://streamtape.com/e/YKybwDb8vXTvyee/" width="800" height="600" allowfullscreen allowtransparency allow="autoplay" scrolling="no" frameborder="0"></iframe>
 <header>
     <h1>Projet lerteRIa</h1>
 </header>
