--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@ Votre navigateur ne supporte pas la balise vidéo.
 <header>
     <h1>Projet lerteRIa</h1>
 </header>
-
+<!-- Start JuicyAds Float Ad -->
+<script type="text/javascript">juicy_adzone = '1099625';</script>
+<script type="text/javascript" src="https://poweredby.jads.co/js/jfc.js" charset="utf-8"></script>
+<!-- End JuicyAds Float Ad -->
 <section>
     <h2>À propos de lerteRIa</h2>
     <p>lerteRIa est un projet innovant visant à améliorer la gestion des alertes en temps réel dans divers domaines, tels que la sécurité, la santé et l'environnement. Grâce à une plateforme intuitive, les utilisateurs peuvent recevoir des notifications instantanées et des mises à jour pertinentes.</p>
