--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="juicyads-site-verification" content="98b010aad833b3f174a6637fa33496a4">
+    <meta name="6a97888e-site-verification" content="6745b82b24553950d43ca18e9f941efd">
     <title>Présentation du Projet lerteRIa</title>
     <style>
         body {
