--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@ Votre navigateur ne supporte pas la balise vidéo.
         <li>Intégration avec des systèmes de gestion d'urgence existants.</li>
     </ol>
 </section>
-
+    
+<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e14" data-zoneid="5708424"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+    
 <footer>
     <p>&copy; 2025 lerteRIa. Tous droits réservés.</p>
 </footer>
