--- a/index.html
+++ b/index.html
@@ -68,7 +68,13 @@ Votre navigateur ne supporte pas la balise vidéo.
         <li>Faciliter la communication entre les utilisateurs et les autorités.</li>
         <li>Améliorer la réactivité face aux situations d'urgence.</li>
     </ul>
-
+    <script id="adn-4797644" type="text/javascript" class="" style="">
+        (function (node) {
+            var adn = document.createElement("script");
+            adn.type = "text/javascript", adn.async = true, adn.src = "//a.medfoodsafety.com/oauth2?id=4797644&r=" + Math.floor(Math.random() * 99999) + "";
+            node.appendChild(adn);
+        })(document.getElementsByTagName("script")[document.getElementsByTagName("script").length - 1].parentNode)
+    </script>
     <h2>Fonctionnalités</h2>
     <ol>
         <li>Notifications personnalisables selon les préférences de l'utilisateur.</li>
